* add export game setup charts menu (gansito)

* show battle casualties in battle display (ahmet)

* mark remote players as remote (ahmet)

* allow multiple canals per sea zone (tekkyy)

* allow centering map on battles (ahmet)

* alt mouse scroll zooms the map in and out (ahmet)

* new unit images (lssah)

* add moderator functions, moderators can boot players, change passwords, and ban ip addresses (sgb)

* better logic for determining attacker defender in odds calculator (Gansito)

* add uninstaller (Gansito)

* allow odds calculator to specify simulation count (Gansito)

* banned ips and banned words are stored in lobby database (sgb)

* the lobby server can now ban ip address (sgb)

* add serialversionuid's to several classes (dagon)

* add unit icon to unit images on the territory tab (dagon)

* add menu to show/hide units (Gansito)

* lobby game table doesn't loose selection when games are added/removed or updated (sgb)

* better route finding logic (sgb)

* added six nation free for all mod for revised map (the_devil_inside)

* fix bug [ 1655283 ] Java 6 reserves java.awt.Window method getWindows() (sgb)

* update to great war 1.3 (Jason Clark)

* add canals to Great War and Big World (Black Elk)

Changes for 0.9.0.2

* fix bug [ 1640596 ] 0.9.0.1 Revised Map Wrap Issue (sgb)

* Fix bug where dissapearing networks players would not be removed from the game (sgb)

* allow lobby server to ping clients to ensure the are still there (sgb)

Changes for 0.9.0.1

* Adjusted British starting units (Jason Clark)

* fixed infantry defense in Classic (sgb)

Changes for 0.9

* improve great war map (Jason Clark)

* improve great war african markers (Jason Clark)

* fixed orientation of french zeppelin in great war (Jason Clark)

* In great war, the US now has a starting transport, 1 inf and 1 cav.  1 us cruiser removed. (Jason Clark)

* In great war, removed connection between Tanga and Weidmannshiel. (Jason Clark)
